<resources>
    <string name="app_name">WhatsAppClone</string>
    <string name="email_or_username">Email or username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_in">Don\'t have an account? <b> Sign in</b></string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_log_in">Already have an account? <b> Log in</b> </string>
    <string name="join_whatsapp_today">Join WhatsApp today</string>
    <string name="type_something_here">Type something here...</string>
    <string name="send">Send</string>
</resources>