<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".SignupActivity">

  <TextView
      android:id="@+id/txtJoinTwitter"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="172dp"
      android:text="@string/join_whatsapp_today"
      android:textColor="@color/text_color"
      android:textSize="25sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/edtSignupEmail"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:background="@drawable/field_shape"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:padding="12dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/txtJoinTwitter" />

  <EditText
      android:id="@+id/edtSignupUsername"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:background="@drawable/field_shape"
      android:hint="@string/username"
      android:inputType="textPersonName"
      android:padding="12dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edtSignupEmail" />

  <EditText
      android:id="@+id/edtSignupPassword"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:background="@drawable/field_shape"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:padding="12dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edtSignupUsername" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btnSignup"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:background="@drawable/login_button"
      android:text="@string/sign_up"
      android:textAllCaps="false"
      android:textColor="@color/white"
      android:textSize="20sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edtSignupPassword" />

  <TextView
      android:id="@+id/txtLoginActivity"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/already_have_an_account_log_in"
      android:textAlignment="center"
      android:textColor="@color/text_color"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>